navbar and hero section done

--- a/index.html
+++ b/index.html
@@ -18,43 +18,43 @@
     <header>
       <!---- NAV BAR ---->
       <nav id="nav" class="nav">
-        <div class="container">
+        <div class="container section-center">
           <!-- Logo -->
           <a href="#" class="logo"><span>Coffee Beans</span></a>
-          <div class="nav-link-container">
-            <ul class="nav-links">
+          <div class="nav-link-container section-center">
+            <ul class="nav-links section-center">
               <li>
-                <a href="#" class="nav-link"
+                <a href="#" class="nav-link section-center"
                   ><i class="bx bxs-coffee-bean"></i>Home</a
                 >
               </li>
               <li>
-                <a href="#" class="nav-link"
+                <a href="#" class="nav-link section-center"
                   ><i class="bx bxs-coffee-bean"></i>Menu</a
                 >
               </li>
               <li>
-                <a href="#" class="nav-link"
+                <a href="#" class="nav-link section-center"
                   ><i class="bx bxs-coffee-bean"></i>About us</a
                 >
               </li>
               <li>
-                <a href="#" class="nav-link"
+                <a href="#" class="nav-link section-center"
                   ><i class="bx bxs-coffee-bean"></i>Contact us</a
                 >
               </li>
             </ul>
-            <button class="btn-close"><i class="bx bx-x"></i></button>
+            <button class="btn-nav-close"><i class="bx bx-x"></i></button>
           </div>
-          <div class="btn-container">
+          <div class="btn-container section-center">
             <a href="#" class="sign-in nav-link">Sign in</a>
             <button class="btn btn-solid">Sign Up</button>
-            <button class="nav-toggle"><i class="bx bx-menu"></i></button>
+            <button class="btn-nav-open"><i class="bx bx-menu"></i></button>
           </div>
         </div>
       </nav>
       <!---- HERO SECTION ---->
-      <section id="hero" class="hero">
+      <section id="hero" class="hero section-center">
         <div class="container">
           <article class="hero-text">
             <span>We’ve got your morning covered with</span>
