menu-section added

--- a/index.html
+++ b/index.html
@@ -70,5 +70,40 @@
         </div>
       </section>
     </header>
+    <main>
+      <!-- Menu -->
+
+      <section id="menu" class="section-pd section-bg">
+        <div class="container">
+          <article class="section-header">
+            <h2>Fresh Hot Coffee</h2>
+            <span class="bar"></span>
+            <p>
+              Add Flavors: vanilla, caramel, hazelnut, lavender, mocha, sugar
+              free vanilla or caramel for $0.75 | Substitute Milk: soy milk,
+              almond milk, oat milk, coconut milk $1.75 | Espresso Shot $1.50
+            </p>
+          </article>
+
+          <article class="menu-items">
+            <!--Single Item-->
+            <!-- <figure class="menu-item">
+          <img src="./assets/menu-item-1.jpg" alt="menu item 1" class="img" />
+          <figcaption class="menu-item-desc">
+            <h5 class="menu-item-name">Espresso</h5>
+            <span class="bar"></span>
+            <p class="add-on">
+              <span>1 Shot $3.50</span>
+              <span>2 Shots $4.50</span>
+              <span>2 Shots $5.00</span>
+            </p>
+            <span class="price">$5.35</span>
+          </figcaption>
+        </figure> -->
+            <!-- end single item -->
+          </article>
+        </div>
+      </section>
+    </main>
   </body>
 </html>
