about-section added

--- a/index.html
+++ b/index.html
@@ -72,7 +72,6 @@
     </header>
     <main>
       <!-- Menu -->
-
       <section id="menu" class="section-pd section-bg">
         <div class="container">
           <article class="section-header">
@@ -102,6 +101,49 @@
         </figure> -->
             <!-- end single item -->
           </article>
+        </div>
+      </section>
+      <!--About-->
+
+      <section id="about" class="about section-pd">
+        <div class="container">
+          <div class="section-center">
+            <div class="about-showcase">
+              <img
+                src="https://images.unsplash.com/photo-1610632380989-680fe40816c6?w=600&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8Nzl8fGFtZXJpY2FubyUyMGNvZmZlZXxlbnwwfHwwfHx8MA%3D%3D"
+                alt="about showcase"
+              />
+            </div>
+            <article class="about-content">
+              <div class="section-header">
+                <h2>About Us</h2>
+                <span class="bar"></span>
+                <span class="bar"></span>
+              </div>
+              <p>
+                Indulge in the ultimate coffee experience with our premium
+                blends. Each variety is crafted from the finest beans, ensuring
+                a rich, aromatic flavor that delights your senses. Whether you
+                savor a robust espresso or a smooth latte, our selection caters
+                to all coffee enthusiasts.
+                <strong
+                  >"Elevate your daily routine with a cup that’s brewed to
+                  perfection"</strong
+                >
+                offering a moment of pure enjoyment and satisfaction.
+              </p>
+              <p>
+                Experience coffee like never before with our expertly sourced
+                and blended beans. Our commitment to quality ensures each cup
+                delivers a rich,
+                <strong>full-bodied flavor that invigorates your day.</strong>
+                Perfect for every occasion, from a morning pick-me-up to a
+                relaxing afternoon treat, our coffee promises an exceptional
+                experience with every sip. Enjoy the taste of excellence in
+                every cup.​
+              </p>
+            </article>
+          </div>
         </div>
       </section>
     </main>
