contact section added

--- a/index.html
+++ b/index.html
@@ -146,6 +146,39 @@
           </div>
         </div>
       </section>
+
+      <!--Contacts-->
+
+      <section id="contacts" class="section-pd section-bg">
+        <div class="container">
+          <div class="section-header">
+            <h2>Our Locations</h2>
+            <span class="bar"></span>
+            <span class="bar"></span>
+          </div>
+
+          <div class="section-center">
+            <div class="col boxes">
+              <!-- <div class="box">
+                <h5>Lorem, ipsum.</h5>
+                <address>Lorem ipsum dolor sit amet consectetur.</address>
+                <span class="phone-no">+00 00 00 00 00</span>
+              </div> -->
+            </div>
+            <div class="col">
+              <iframe
+                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3501.891926800815!2d77.2169032737526!3d28.63300098406258!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x390cfd1d8e6bed2d%3A0xd2260a8e0dd4732b!2sCentral%20Park!5e0!3m2!1sen!2sin!4v1722962921724!5m2!1sen!2sin"
+                width="600"
+                height="450"
+                style="border: 0"
+                allowfullscreen=""
+                loading="lazy"
+                referrerpolicy="no-referrer-when-downgrade"
+              ></iframe>
+            </div>
+          </div>
+        </div>
+      </section>
     </main>
   </body>
 </html>
