--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
     </header>
     <main>
       <!-- Menu -->
-      <section id="menu" class="section-pd section-bg">
+      <section id="menu" class="section-pd">
         <div class="container">
           <article class="section-header">
             <h2>Fresh Hot Coffee</h2>
@@ -84,28 +84,12 @@
             </p>
           </article>
 
-          <article class="menu-items">
-            <!--Single Item-->
-            <!-- <figure class="menu-item">
-          <img src="./assets/menu-item-1.jpg" alt="menu item 1" class="img" />
-          <figcaption class="menu-item-desc">
-            <h5 class="menu-item-name">Espresso</h5>
-            <span class="bar"></span>
-            <p class="add-on">
-              <span>1 Shot $3.50</span>
-              <span>2 Shots $4.50</span>
-              <span>2 Shots $5.00</span>
-            </p>
-            <span class="price">$5.35</span>
-          </figcaption>
-        </figure> -->
-            <!-- end single item -->
-          </article>
+          <article class="menu-items"></article>
         </div>
       </section>
       <!--About-->
 
-      <section id="about" class="about section-pd">
+      <section id="about" class="about section-pd section-bg">
         <div class="container">
           <div class="section-center">
             <div class="about-showcase">
@@ -158,13 +142,7 @@
           </div>
 
           <div class="section-center">
-            <div class="col boxes">
-              <!-- <div class="box">
-                <h5>Lorem, ipsum.</h5>
-                <address>Lorem ipsum dolor sit amet consectetur.</address>
-                <span class="phone-no">+00 00 00 00 00</span>
-              </div> -->
-            </div>
+            <div class="col boxes"></div>
             <div class="col">
               <iframe
                 src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3501.891926800815!2d77.2169032737526!3d28.63300098406258!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x390cfd1d8e6bed2d%3A0xd2260a8e0dd4732b!2sCentral%20Park!5e0!3m2!1sen!2sin!4v1722962921724!5m2!1sen!2sin"
@@ -179,6 +157,101 @@
           </div>
         </div>
       </section>
+
+      <!--Gallery-->
+
+      <section id="gallery" class="section-pd">
+        <div class="container">
+          <div class="gallery-wrapper">
+            <img src="/assets/item-1.jpeg" alt="" class="img-element" />
+            <img src="/assets/item-2.jpeg" alt="" />
+            <img src="/assets/item-3.jpeg" alt="" />
+            <img src="/assets/item-6.jpeg" alt="" />
+            <img src="/assets/item-5.jpeg" alt="" />
+            <img src="/assets/item-3.jpeg" alt="" />
+            <img src="/assets/item-6.jpeg" alt="" />
+            <img src="/assets/item-5.jpeg" alt="" />
+          </div>
+          <div class="btn-container section-center">
+            <button class="btn">See More</button>
+          </div>
+        </div>
+      </section>
     </main>
+    <footer>
+      <section class="footer">
+        <div class="container">
+          <div class="row">
+            <div class="col">
+              <!-- Logo -->
+              <a href="#" class="logo"><span>Coffee Beans</span></a>
+              <p>
+                Lorem ipsum dolor sit
+                <strong>amet consectetur, adipisicing elit. Quas</strong>
+                beatae delectus quo consequatur id reprehenderit.
+              </p>
+            </div>
+
+            <div class="col">
+              <h5>Important links</h5>
+              <ul>
+                <li><a href="#">Home</a></li>
+                <li><a href="#">Menu</a></li>
+                <li><a href="#">About</a></li>
+                <li><a href="#">Contacts</a></li>
+              </ul>
+            </div>
+
+            <div class="col">
+              <h5>Contact Us</h5>
+              <ul>
+                <li>
+                  <address>
+                    Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+                    Tempora, recusandae.
+                  </address>
+                </li>
+                <li>
+                  <span class="phone-no">+00 00 00 0 0</span>
+                </li>
+                <li>
+                  <span class="email">coffeebeans2024@coffee.shop</span>
+                </li>
+              </ul>
+            </div>
+
+            <div class="col">
+              <h5>Follow Us</h5>
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                Eligendi, soluta.
+              </p>
+              <ul>
+                <li class="social-link">
+                  <a href="#"><i class="bx bxl-facebook"></i></a>
+                </li>
+                <li class="social-link">
+                  <a href="#"><i class="bx bxl-instagram"></i></a>
+                </li>
+                <li class="social-link">
+                  <a href="#"><i class="bx bxl-pinterest-alt"></i></a>
+                </li>
+                <li class="social-link">
+                  <a href="#"><i class="bx bxl-google-plus"></i></a>
+                </li>
+              </ul>
+            </div>
+          </div>
+        </div>
+      </section>
+      <section class="site-footer">
+        <div class="container">
+          <p class="copywrite-text">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus,
+            repellat. Voluptatum earum eos perspiciatis iste repudiandae.
+          </p>
+        </div>
+      </section>
+    </footer>
   </body>
 </html>
